// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries indexes: all ndexes 1`] = `
Array [
  Object {
    "description": undefined,
    "kind": "input",
    "name": "a",
    "order": 0,
    "required": false,
    "title": undefined,
    "type": Object {
      "name": "String",
      "type": "scalar",
    },
  },
  Object {
    "name": "b",
    "type": Object {
      "fields": Array [
        Object {
          "description": undefined,
          "kind": "input",
          "name": "b",
          "order": 0,
          "required": false,
          "title": undefined,
          "type": Object {
            "name": "String",
            "type": "scalar",
          },
        },
        Object {
          "description": undefined,
          "kind": "input",
          "name": "c",
          "order": 1,
          "required": false,
          "title": undefined,
          "type": Object {
            "name": "String",
            "type": "scalar",
          },
        },
      ],
      "name": "b",
    },
  },
]
`;

exports[`queries unique indexes: all identity indexes 1`] = `
Array [
  Object {
    "description": undefined,
    "kind": "input",
    "name": "a",
    "order": 0,
    "required": true,
    "title": undefined,
    "type": Object {
      "name": "String",
      "type": "scalar",
    },
  },
  Object {
    "name": "b",
    "type": Object {
      "fields": Array [
        Object {
          "description": undefined,
          "kind": "input",
          "name": "b",
          "order": 0,
          "required": true,
          "title": undefined,
          "type": Object {
            "name": "String",
            "type": "scalar",
          },
        },
        Object {
          "description": undefined,
          "kind": "input",
          "name": "c",
          "order": 1,
          "required": true,
          "title": undefined,
          "type": Object {
            "name": "String",
            "type": "scalar",
          },
        },
      ],
      "name": "b",
    },
  },
  Object {
    "description": undefined,
    "kind": "input",
    "name": "id",
    "order": 0,
    "required": true,
    "title": undefined,
    "type": Object {
      "name": "ID",
      "type": "scalar",
    },
  },
]
`;
